# ChangeLog for net-www/liferea
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/liferea/Attic/ChangeLog,v 1.12 2004/09/03 23:24:08 pvdabeel Exp $

  04 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  liferea-0.5.3b.ebuild:
  Masked liferea-0.5.3b.ebuild stable for ppc

  30 Aug 2004; David Holm <dholm@gentoo.org> liferea-0.5.3b.ebuild:
  Added to ~ppc.

*liferea-0.5.3b (22 Aug 2004)

  22 Aug 2004; Mike Gardiner <obz@gentoo.org> -liferea-0.4.6b.ebuild,
  -liferea-0.4.8.ebuild, -liferea-0.4.9.ebuild, liferea-0.5.3.ebuild,
  +liferea-0.5.3b.ebuild:
  Added new version 0.5.3b, marked 0.5.3 x86, and removed old versions that
  incorrectly handled the gtkhtml/mozilla USEing

*liferea-0.5.3 (18 Aug 2004)

  18 Aug 2004; Mike Gardiner <obz@gentoo.org> +liferea-0.5.3.ebuild:
  New version 0.5.3 added, thanks for the help to all in bug #54600, fixed up
  the mozilla/gtkhtml2 handling - slightly

*liferea-0.4.9 (23 May 2004)

  23 May 2004; Yi Qiang <khai@gentoo.org> :
  Version bump, added ewarns about losing the feed list

*liferea-0.4.8 (05 May 2004)

  05 May 2004; Yi Qiang <khai@gentoo.org> :
  Version bump

*liferea-0.4.6e (13 Apr 2004)

  13 Apr 2004; <khai@gentoo.org> liferea-0.4.6e.ebuild:
  Version bump, closes #45047

*liferea-0.4.6c (06 Mar 2004)

  06 Mar 2004; Alastair Tse <liquidx@gentoo.org> liferea-0.4.6c.ebuild:
  version bump (#43319)

  02 Mar 2004; <augustus@gentoo.org> liferea-0.4.6b.ebuild:
  Added ~amd64 keyword.

*liferea-0.4.6b (08 Jan 2004)

  08 Jan 2004; Alastair Tse <liquidx@gentoo.org> liferea-0.4.6b.ebuild:
  version bump (#37472)

*liferea-0.4.5 (10 Dec 2003)

  10 Dec 2003; Alastair Tse <liquidx@gentoo.org> liferea-0.4.5.ebuild:
  initial commit. ebuild based on suka's submission <suka@t0.or.at> (#27551)
