@@ -1,6 +1,8 @@
-MD5 d1f8f7d016aa98d9be45adcf361de0a6 ChangeLog 1826
+MD5 76750be854356c5ec0462ca66653d9b5 liferea-0.5.3c.ebuild 1007
 MD5 a4bf93fa3fff0279fbb1164dc6fa38e2 liferea-0.5.3.ebuild 1017
 MD5 8ad7e4f24fe5557d405643bf2aa0ad84 liferea-0.5.3b.ebuild 1011
 MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
+MD5 d93de3daf9c3ba11b66880798c43142e ChangeLog 1915
 MD5 97616fa27e5b823f07e295766beeb0b3 files/digest-liferea-0.5.3 65
 MD5 41f7e0b1feb9d77d8c797cdeb89fb78e files/digest-liferea-0.5.3b 66
+MD5 d21d4660264afa11def9f6e39f193e58 files/digest-liferea-0.5.3c 66
